force-app/main/default/objects/Match__c/fields/Competition__c.field-meta.xml
<CustomField>
    <fullName>Competition__c</fullName>
    <label>Competition</label>
    <referenceTo>Competition__c</referenceTo>
    <relationshipLabel>Competitions</relationshipLabel>
    <relationshipName>Competitions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>