force-app/main/default/objects/Match__c/fields/HomeGol__c.field-meta.xml
<CustomField>
    <fullName>HomeGol__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Home Team Goals</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>