force-app/main/default/objects/Match__c/fields/HomeTeam__c.field-meta.xml
<CustomField>
    <fullName>HomeTeam__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Home Team</label>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>Hosts</relationshipLabel>
    <relationshipName>Hosts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>