force-app/main/default/objects/Match__c/fields/MatchComplete__c.field-meta.xml
<CustomField>
    <fullName>MatchComplete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked (set to true) when match ended and all statistics completed</description>
    <label>Match Complete</label>
    <type>Checkbox</type>
</CustomField>