force-app/main/default/objects/Match__c/fields/Referee__c.field-meta.xml
<CustomField>
    <fullName>Referee__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Match Referee</label>
    <referenceTo>Referee__c</referenceTo>
    <relationshipLabel>Ref</relationshipLabel>
    <relationshipName>Ref</relationshipName>
    <type>Lookup</type>
</CustomField>