force-app/main/default/objects/Match__c/fields/Stadium__c.field-meta.xml
<CustomField>
    <fullName>Stadium__c</fullName>
    <formula>HomeTeam__r.Stadium__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Match Stadium</label>
    <type>Text</type>
</CustomField>