force-app/main/default/objects/Match__c/fields/VisitorGol__c.field-meta.xml
<CustomField>
    <fullName>VisitorGol__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Visitor Team Goals</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>