force-app/main/default/objects/Match__c/fields/Visitors__c.field-meta.xml
<CustomField>
    <fullName>Visitors__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Visitor Team</label>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>Visitor</relationshipLabel>
    <relationshipName>Visitor</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>