force-app/main/default/objects/Match__c/validationRules/CompleteMatch.validationRule-meta.xml
<ValidationRule>
    <fullName>CompleteMatch</fullName>
    <active>true</active>
    <description>Check if match start date in future</description>
    <errorConditionFormula>DATEVALUE(StartDateTime__c) &gt;  TODAY()</errorConditionFormula>
    <errorDisplayField>MatchComplete__c</errorDisplayField>
    <errorMessage>Only past match can be complete</errorMessage>
</ValidationRule>