force-app/main/default/objects/Match__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Competition__c</columns>
    <columns>HomeTeam__c</columns>
    <columns>Visitors__c</columns>
    <columns>HomeGol__c</columns>
    <columns>VisitorGol__c</columns>
    <columns>StartDateTime__c</columns>
    <columns>Referee__c</columns>
    <columns>MatchComplete__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>